--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-alata: var(--font-alata);
+  --font-jost: var(--font-jost);
 }
 
 @media (prefers-color-scheme: dark) {
