updated footer and added some responsiveness

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,8 @@
     @apply border-border outline-ring/50;}
   body {
     @apply bg-background text-foreground;}}
+
+  @theme{
+    --breakpoint-xl: 1450px
+  }
+
