--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
   --font-roboto: var(--font-roboto);
   --font-inter: var(--font-inter)
 ;
+  --color-text-color: var(--color-primary1);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -50,6 +51,7 @@
   --radius-xl: calc(var(--radius) + 4px)}
 
 :root {
+  --color-primary1: #055D59;
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
