--- a/app/globals.css
+++ b/app/globals.css
@@ -173,3 +173,32 @@
       @apply rounded-lg shadow-md my-6 mx-auto;
   }
 
+
+  /* Custom Time Picker Styles */
+.react-time-picker {
+  display: inline-flex;
+  position: relative;
+}
+.react-time-picker--disabled {
+  opacity: 0.5;
+}
+.react-time-picker__wrapper {
+  border: none !important;
+  padding: 0;
+}
+.react-time-picker__inputGroup {
+  padding: 0;
+  min-width: auto;
+}
+.react-time-picker__inputGroup__input {
+  color: #111827;
+  font-weight: 500;
+  font-size: 0.875rem;
+  padding: 0;
+  border: none;
+  outline: none;
+}
+.react-time-picker__button {
+  display: none;
+}
+
